# caato2

./: README.md  caato2.repos
.github/workflows/: buildcheck_BACKUP_5328.yaml
caato2_bringup/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
caato2_bringup/launch/: caato2_nav.launch  caato2_remote.launch  caato2_teleop.launch  cartographer_mapping.launch  no_fp_cartographer_mapping.launch  robot.launch
caato2_bringup/launch/include/: arm.launch  caato2_3d_lasers.launch  caato2_lasers.launch  caato2_motors.launch  caato2_multiple_realsense.launch  caato2_px4.launch  caato2_realsense.launch  caato2_reverse_dock.launch  caato2_rmf_client.launch  description.launch  description_caato_3d.launch  description_caato_3d_no_fp.launch  ds4_trigger.launch  lasers.launch  motors.launch
caato2_bringup/launch/include/config/: px4_config.yaml  px4_pluginlist.yaml
caato2_bringup/rviz/: bringup.rviz  realsense.rviz
caato2_bringup/src/: .ouster_tf_publisher_node.cpp.swp  ds4_trigger.cpp  odomTfTransform.cpp  ouster_tf_publisher_node.cpp
caato2_charger_docker/: CMakeLists.txt  package.xml
caato2_charger_docker/action/: ChargerDock.action
caato2_charger_docker/cfg/: PID.cfg
caato2_charger_docker/include/: PID.h  charger_docker.h
caato2_charger_docker/src/: PID.cpp  charger_docker.cpp  charger_docker_node.cpp
caato2_charger_docking/: CMakeLists.txt  package.xml
caato2_cmd_mux/: CMakeLists.txt  package.xml
caato2_cmd_mux/launch/: cmd_vel_mux.launch
caato2_cmd_mux/src/: cmd_vel_mux.cpp
caato2_cmd_mux/srv/: change_sub_topic.srv
caato2_description/: CMakeLists.txt  package.xml  test.rviz
caato2_description/launch/: caato2_testurdf.launch
caato2_description/meshes/sensors/: pal.stl
caato2_description/meshes/wheels/: caster_wheel.stl
caato2_description/rviz/: test.rviz
caato2_description/urdf/: caato2.urdf.xacro  caato2_3d.urdf.xacro  caato2_3d_nb.urdf.xacro  caato2_gazebo_3d.urdf.xacro  common_properties.xacro  no_fp_caato2_3d.urdf.xacro
caato2_description/urdf/accessories/: caato2.gazebo.xacro  sick_scan.urdf.xacro
caato2_examples/: CMakeLists.txt  package.xml
caato2_gazebo/: CMakeLists.txt  package.xml
caato2_gazebo/config/: tags.yaml
caato2_gazebo/launch/: TRL_world.launch  caato2_3d_emptyworld.launch  caato2_TRL_L2.launch  caato2_emptyworld.launch  caato2_mbc.2.launch  caato2_mbc.launch  caato2_mbc.old.launch  caato2_mbc_apriltag.launch  caato2_mbc_eband.launch  caato2_mbc_stm.launch  caato2_tb3-world.launch  caato2_test_3d_urdf.launch  caato2_testurdf.launch  simple.launch
caato2_gazebo/maps/TRL/: TRL_L2.pgm  TRL_L2.yaml  TRL_L2_compressed.pgm  TRL_L2_compressed.yaml
caato2_gazebo/maps/mbc/: mbc_lvl_10_060522.pgm  mbc_lvl_10_060522.yaml
caato2_gazebo/maps/others/: mbc_lvl_10_060522.pgm  mbc_lvl_10_060522.yaml  test2.pgm  test2.yaml
caato2_gazebo/models/building_L1/: model.sdf
caato2_gazebo/models/sam_mbc_mbc_lvl10/: model.config  model.sdf
caato2_gazebo/models/trl_TRL_L2/: model.config  model.sdf
caato2_gazebo/models/trl_TRL_L2/meshes/: model.material
caato2_gazebo/models/trl_TRL_L3/: model.config  model.sdf
caato2_gazebo/models/trl_TRL_L4/: model.config  model.sdf
caato2_gazebo/models/trl_TRL_L5/: model.config  model.sdf
caato2_gazebo/models/trl_TRL_L6/: model.config  model.sdf
caato2_gazebo/rviz/: urdf.rviz  with_realsense.rviz  with_tag_detection.rviz
caato2_gazebo/worlds/: office.world  sam_mbc.world  trl.world  trl_modified.world
caato2_gazebo/worlds/traffic-editor-file/: 0.yaml  sam_mbc.building.yaml
caato2_navigation/: CMakeLists.txt  package.xml
caato2_navigation/launch/: 2d_cartographer.launch  2d_docking.launch  2d_navigation.launch  3d_navigation.launch  amcl.launch  caato2_3d_nav.launch  caato2_docking.launch  caato2_navigation.launch  move_base.launch  move_base_dwa.launch  move_base_eband.launch  move_base_teb.launch  remote_computer.launch
caato2_navigation/launch/move_base/: amcl.launch  move_base_dwa.launch  move_base_eband.launch  move_base_teb.launch
caato2_navigation/maps/: 070622_L9.pgm  070622_L9.yaml  130622_L9.pgm  130622_L9.yaml  lvlM.pgm  lvlM.yaml  trl_l2_caato2.pgm  trl_l2_caato2.yaml
caato2_navigation/param/: costmap_common_params_caato2.yaml  dwa_local_planner_params.yaml  eband_local_planner_params.yaml  teb_local_planner_params.yaml
caato2_navigation/param/2ndAug2022/: costmap_common_params.global.yaml  costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
caato2_navigation/param/caato1/: costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
caato2_navigation/param/tb3_default/: base_local_planner_params.yaml  costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  local_costmap_params.yaml  move_base_params.yaml
caato2_navigation/rviz/: atc.rviz  caato2_navigation.rviz
caato2_reverse_docker/: CMakeLists.txt  package.xml
caato2_reverse_docker/action/: ReverseDock.action
caato2_reverse_docker/cfg/: PID.cfg
caato2_reverse_docker/include/caato2_reverse_docker/: PID.h  reverse_docker.h
caato2_reverse_docker/src/: PID.cpp  reverse_docker.cpp  reverse_docking_node.cpp
caato2_stm/: CMakeLists.txt  package.xml
caato2_stm/include/caato2_stm/: cmd_vel_mux.h  detection_logic.h  (+3 more)
caato2_stm/launch/: cmd_vel_mux.launch
caato2_stm/msg/: docking_state.msg  navigation_state.msg
caato2_stm/src/: cmd_vel_mux.cpp  cmd_vel_mux_node.cpp  detection_logic.cpp  docking_logic.cpp  docking_manager.cpp  docking_manager_node.cpp  docking_node.cpp  navigation_manager.cpp  navigation_manager_node.cpp
caato2_stm/srv/: change_robot_state.srv  docking_state.srv  navigate_goal.srv  navigate_sequence.srv
caato_fleet_client/: CMakeLists.txt  package.xml
caato_fleet_client/launch/: test.launch
caato_fleet_client/scripts/: REST_API_Server.py
check_charging/: CMakeLists.txt  package.xml
check_charging/src/: battery_state.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+20 files in other folders)
