<?xml version="1.0"?>
<package format="2">
  <name>caato2_bringup</name>
  <version>0.0.0</version>
  <description>Essential launch files for starting caato2 in real life</description>

  <maintainer email="samuelangdj@gmail.com">Samuel Ang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>roboteq_diff_driver</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <!-- <exec_depend>std_srvs</exec_depend> -->
  <!-- <exec_depend>tf2</exec_depend> -->
  <!-- <exec_depend>tf2_ros</exec_depend> -->
  <exec_depend>laser_proc</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>caato2_description</exec_depend>
  <!-- <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  -->

  <export>
  </export>
</package>
