<?xml version="1.0"?>
<package format="2">
  <name>caato2_description</name>
  <version>1.0.0</version>
  <description>The caato2_description package</description>
  <maintainer email="samuelangdj@gmail.com">Samuel Ang</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
