<?xml version="1.0"?>
<package format="2">
  <name>caato2_examples</name>
  <version>0.0.0</version>
  <description>Sandbox to test out examples without affecting the core packages</description>

  <maintainer email="samuelangdj@gmail.com">Samuel Ang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <exec_depend>roboteq_diff_driver</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>laser_proc</exec_depend>

  <export>
  </export>
</package>
