<?xml version="1.0"?>
<package format="2">
  <name>caato2_gazebo</name>
  <version>1.0.0</version>
  <description>Launch files for running caato2 in simulation (Gazebo) with decada_sim_assets</description>
  <maintainer email="samuelangdj@gmail.com">Samuel Ang</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>caato2_description</exec_depend>

  <export>
      <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
