<?xml version="1.0"?>
<package format="2">
  <name>caato2_navigation</name>
  <version>1.0.0</version>
  <description>Launch files for the caato2 navigation package (used in both simulation and IRL)</description>
  <maintainer email="samuelangdj@gmail.com">Samuel Ang</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>caato2_bringup</exec_depend>
</package>
